@@ -983,6 +983,8 @@ class PPFrame_DOM implements PPFrame {
 	 */
 	var $depth;
 
+	private $volatile = false;
+
 	/**
 	 * @var array
 	 */
@@ -1485,6 +1487,24 @@ class PPFrame_DOM implements PPFrame {
 	function getTitle() {
 		return $this->title;
 	}
+
+	/**
+	 * Set the volatile flag
+	 *
+	 * @param bool $flag
+	 */
+	function setVolatile( $flag = true ) {
+		$this->volatile = $flag;
+	}
+
+	/**
+	 * Get the volatile flag
+	 *
+	 * @return bool
+	 */
+	function isVolatile() {
+		return $this->volatile;
+	}
 }
 
 /**
@@ -1552,10 +1572,14 @@ class PPTemplateFrame_DOM extends PPFrame_DOM {
 	 * @return string
 	 */
 	function cachedExpand( $key, $root, $flags = 0 ) {
-		if ( !isset( $this->parent->childExpansionCache[$key] ) ) {
-			$this->parent->childExpansionCache[$key] = $this->expand( $root, $flags );
+		if ( isset( $this->parent->childExpansionCache[$key] ) ) {
+			return $this->parent->childExpansionCache[$key];
 		}
-		return $this->parent->childExpansionCache[$key];
+		$retval = $this->expand( $root, $flags );
+		if ( !$this->isVolatile() ) {
+			$this->parent->childExpansionCache[$key] = $retval;
+		}
+		return $retval;
 	}
 
 	/**
@@ -1634,6 +1658,11 @@ class PPTemplateFrame_DOM extends PPFrame_DOM {
 	 */
 	function isTemplate() {
 		return true;
+	}
+
+	function setVolatile( $flag = true ) {
+		parent::setVolatile( $flag );
+		$this->parent->setVolatile( $flag );
 	}
 }
 
